# Brazil-Economic-Data-Platform

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/db/: app.db  connection.py
backend/app/etl/: run.py  runner.py
backend/app/schemas/: models.py
backend/app/services/: queries.py  settings.py
backend/tests/: test_api.py
data/: indicators.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: DataTable.tsx  DateRange.tsx  Selector.tsx  SeriesChart.tsx  StatCard.tsx  StatsSummary.tsx
frontend/src/hooks/: useIndicators.ts  useLatest.ts  useSeries.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
