[tool.poetry]
name = "economic-indicators-backend"
version = "0.1.0"
description = "API de indicadores econômicos"
authors = ["Miguel Zuchelli Rodrigues"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.110.0"
uvicorn = { version = "^0.27.0", extras = ["standard"] }
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
ruff = "^0.3.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
